--- a/lang/en_gb.yml
+++ b/lang/en_gb.yml
@@ -1,7 +1,2 @@
-be_search_article_name: Articlename
-be_search_article_id: Article Id
-be_search_start: search
 be_search_quick_navi: Quick Navigation
-
-be_search_mpool_media: Medianame
-be_search_mpool_start: search
+be_search_medium_name: Medium Name
